ui/deploy/manifests/dev/manupulse_pulstats-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pulstats-ui
  name: pulstats-ui
  namespace: manupulse
spec:
  ports:
  - port: 80
  selector:
    app: pulstats-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    linkerd.io/inject: enabled
  labels:
    app: pulstats-ui
  name: pulstats-ui
  namespace: manupulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulstats-ui
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: pulstats-ui
        namespace: manupulse
    spec:
      containers:
      - env:
        - name: APP_ENVIRONMENT
          value: dev
        image: registry4manupulse.azurecr.io/pulstats-ui:v0.1.60
        name: pulstats-ui
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "2"
            memory: 128Mi
          requests:
            cpu: 250m
            memory: 16Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: mkcert-cluster-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    zipkin-collector-host: collector.linkerd-jaeger
  labels:
    app: pulstats-ui
  name: pulstats-ui
  namespace: manupulse
spec:
  rules:
  - host: dev.manupulse.com
    http:
      paths:
      - backend:
          service:
            name: pulstats-ui
            port:
              number: 80
        path: /pulstats/ui(/|$)(.*)
        pathType: Prefix
  tls:
  - hosts:
    - dev.manupulse.com
    secretName: dev-manupulse-com
